# ImperatorToCK3

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .shellcheckrc  .travis.yml  CODEOWNERS  ImperatorToCK2.sln  ImperatorToCK3.iss  ImperatorToCK3.sln  ImperatorToCK3.sln.DotSettings  ImperatorToCK3.slnx  ImperatorToCk2.sln  ImperatorToCk3.sln  ImperatorToCk3.sln.DotSettings  LICENSE  NuGet.Config  PyParser.py  README.md  appveyor.yml  build.sh  build_linux.sh  global.json  nuget.config  run-save-conversion-tests.ps1
ImageMagick/: CMakeLists.txt
ImageMagick/include/: Magick++.h
ImageMagick/include/MagickCore/: magick-baseconfig.h  version.h
ImageMagick/include/MagickWand/: MagickWand.h
ImageMagick/lib/: CORE_RL_Magick++_.lib  CORE_RL_MagickCore_.lib  CORE_RL_MagickWand_.lib
ImperatorToCK3/: .editorconfig  CMakeLists.txt  Configuration.cs  Converter.cs  ConverterGlobals.cs  Copy_Files.bat  Copy_Files.sh  Copy_Files_Debug.bat  Copy_Files_Release.bat  EnumVariableDefinitions.cs  ImperatorToCK3.csproj  ImperatorToCK3.vcxproj  ImperatorToCK3.vcxproj.filters  LegionConversion.cs  Program.cs  Save_Commit_ID_Windows.bat  TrimmingRootDescriptors.xml  app.manifest  log4net.config
ImperatorToCK3/CK3/: CK3LocDB.cs  ParserExtensions.cs  Regexes.cs  World.cs
ImperatorToCK3/CK3/Armies/: MenAtArmsCost.cs  MenAtArmsType.cs
ImperatorToCK3/CK3/Characters/: AccessoryGeneValue.cs  Character.cs  CharacterCollection.cs  Characters.cs  CharactersLoader.cs  DNA.cs  DNAAccessoryGeneValue.cs  DNAColorGeneValue.cs  DNAFactory.cs  DNAGeneValue.cs  Pregnancy.cs  Trait.cs
ImperatorToCK3/CK3/Cultures/: Culture.cs  CultureCollection.cs  CultureData.cs  NameList.cs  Pillar.cs  PillarCollection.cs  PillarData.cs
ImperatorToCK3/CK3/Diplomacy/: DiplomacyDB.cs
ImperatorToCK3/CK3/Dynasties/: Dynasty.cs  DynastyCollection.cs  House.cs  HouseCollection.cs
ImperatorToCK3/CK3/Legends/: LegendSeed.cs  LegendSeedCollection.cs
ImperatorToCK3/CK3/Localization/: CK3LocBlock.cs  CK3LocType.cs
ImperatorToCK3/CK3/Map/: MapData.cs  ProvinceDefinition.cs  ProvinceDefinitions.cs  ProvincePosition.cs
ImperatorToCK3/CK3/Modifiers/: Modifier.cs  ModifierCollection.cs
ImperatorToCK3/CK3/Provinces/: Province.cs  ProvinceCollection.cs  ProvinceDetails.cs  ProvinceHistory.cs  ProvinceMappings.cs  ProvincePosition.cs  Provinces.cs
ImperatorToCK3/CK3/Religions/: DoctrineCategory.cs  DoctrineGroup.cs  Faith.cs  FaithData.cs  HolySite.cs  Religion.cs  ReligionCollection.cs
ImperatorToCK3/CK3/Titles/: IReadOnlyTitleCollection.cs  LandedTitles.cs  RulerTerm.cs  Title.cs  TitleCollection.cs  TitleHistory.cs  TitleRank.cs  TitleRankUtils.cs  TitlesHistory.cs
ImperatorToCK3/CK3/Wars/: War.cs
ImperatorToCK3/CommonUtils/: AdditiveContainerFieldDef.cs  BufferedReaderExtensions.cs  ConcurrentIgnoredKeywordsSet.cs  ContainerField.cs  ContainerFieldDef.cs  ContainerKeyFieldDef.cs  ContentsClass.cs  DatedHistoryBlock.cs  DiffFieldDef.cs  DiffHistoryField.cs  EnumerableExtensions.cs  FieldValue.cs  FileHelper.cs  FileOpeningHelper.cs  History.cs  HistoryFactory.cs  HistoryField.cs  IHistoryField.cs  IListExtensions.cs  IgnoredKeywordsSet.cs  LiteralHistoryField.cs  ModDefinition.cs  PathHelper.cs  SimpleField.cs  SimpleFieldDef.cs  SimpleHistoryField.cs
ImperatorToCK3/CommonUtils/Genes/: AccessoryGene.cs  AccessoryGeneTemplate.cs  AccessoryGenes.cs  Gene.cs  GenesDB.cs  MorphGene.cs  MorphGeneTemplate.cs  SpecialGenes.cs  WeightBlock.cs
ImperatorToCK3/CommonUtils/Map/: Adjacency.cs  IRegionMapper.cs  MapData.cs  ProvinceDefinition.cs  ProvinceDefinitions.cs  ProvincePosition.cs  SpecialProvinceCategory.cs
ImperatorToCK3/Configurables/: ReplaceableHolySites.cs
ImperatorToCK3/Data_Files/: ReadMe.txt  after_converting.txt  configuration_l_english.yml  configuration_l_simp_chinese.yml  fronter-configuration.txt  fronter-options.txt  license.txt  options_l_english.yml  options_l_simp_chinese.yml
ImperatorToCK3/Data_Files/blankMod/: dummy.txt
ImperatorToCK3/Data_Files/configurables/: accessory_genes_map.txt  artifact_map.txt  artifact_visuals_map.txt  ccu_heritage_parameters.txt  ccu_language_parameters.txt  character_name_overrides.txt  characters_prehistory.txt  ck3_characters_to_preserve.txt  ck3_mods.txt  converter_cultures.txt  converter_faiths.liquid  converter_faiths.txt  converter_holy_sites.txt  country_rank_map.txt  (+45 more)
ImperatorToCK3/Exceptions/: ConverterException.cs  UserErrorException.cs
ImperatorToCK3/Helpers/: EnumHelper.cs  MusicPlayer.cs  Rakaly.cs  RakalyCaller.cs
ImperatorToCK3/Imperator/: CharacterVariable.cs  Defines.cs  ScriptValueCollection.cs  ScriptValuesReader.cs  World.cs
ImperatorToCK3/Mappers/: CoaMapper.cs  DeathReasonMapper.cs  DeathReasonMapping.cs
ImperatorToCK3/Outputter/: BookmarkOutputter.cs  CharacterOutputter.cs  CharactersOutputter.cs  CoatOfArmsEmblemsOutputter.cs  CoatOfArmsOutputter.cs  ColoredEmblemsOutputter.cs  CulturesOutputter.cs  DecisionsOutputter.cs  DiplomacyOutputter.cs  DynastiesOutputter.cs  FileTweaker.cs  GeographicalRegionOutputter.cs  LocalizationOutputter.cs  MenAtArmsOutputter.cs  NamedColorsOutputter.cs  OnActionOutputter.cs  OutVersion.cs  PartOfFileToModify.cs  PillarOutputter.cs  ProvinceOutputter.cs  ProvincesOutputter.cs  ReligionsOutputter.cs  SuccessionTriggersOutputter.cs  TitleOutputter.cs  TitlesOutputter.cs  VersionOutputter.cs  WarsOutputter.cs  WorldOutputter.cs
ImperatorToCK3/Resources/: rakaly.dll.lib
ImperatorToCK3/Source/: Configuration.cs  Converter.cs  ImperatorToCK3Converter.cpp  ImperatorToCK3Converter.h  Program.cs  main.cpp
ImperatorToCK3Tests/: AccessoryGenesTests.cpp  CMakeLists.txt  CoatsOfArms.txt  ImperatorToCK3Tests.vcxproj  ImperatorToCK3Tests.vcxproj.filters  TitlesHistory.txt  test_main.cpp
ImperatorToCK3Tests/CK3WorldTests/: CK3ProvinceDetailsTests.cpp
ImperatorToCK3Tests/CommonTests/: CommonFunctionsTests.cpp
ImperatorToCK3Tests/CommonUtilitiesTests/: DatedHistoryBlockTests.cpp  HistoryTests.cpp
ImperatorToCK3Tests/TestFiles/: CK3ProvinceDetailsCorrect.txt  TitlesHistory.txt  title_map.txt
(+1409 files in other folders)
